# ai_robot_practice_1

./: .gitignore  README.md
ai_robot_bringup/: CMakeLists.txt  package.xml
ai_robot_bringup/launch/: carto2d_reload_map.launch  start_all_map.launch  start_all_map_compr.launch  start_base_huawei.launch  start_justmove.launch  start_justmove_huawei.launch  start_justmove_kewei.launch  start_locnav_amcl.launch  start_locnav_amcl_sim.launch  start_locnav_huawei.launch  start_locnav_kewei.launch  start_locnav_sim.launch  start_mapping_huawei.launch  start_mapping_kewei.launch  start_mapping_sim.launch  start_navdemo.launch  start_navdemo_sim.launch  start_obsavoid.launch  start_zig.launch
ai_robot_bringup/scripts/: start_justmove_kewei.sh  start_locnav_kewei.sh  start_mapping_kewei.sh
ai_robot_interface/: CMakeLists.txt  package.xml
ai_robot_interfaces/: CMakeLists.txt
ai_robot_interfaces/msg/: MpTraj.msg
ai_robot_laser_core/: CMakeLists.txt  package.xml
ai_robot_localization/: CMakeLists.txt  README.md  package.xml
ai_robot_localization/carto_configs/: carto_2d_loc_testbed04.lua  carto_2d_slam_testbed04.lua  carto_3d_loc_testbed04.lua  carto_3d_slam_testbed04.lua  carto_loc_huawei.lua  carto_slam_huawei.lua
ai_robot_localization/launch/: carto_2d_loc.launch  carto_2d_slam.launch  carto_3d_loc.launch  carto_3d_loc_offline.launch  carto_3d_slam.launch  carto_3d_slam_offline.launch  carto_loc_huawei.launch  carto_loc_offline_huawei.launch  carto_slam_huawei.launch  orbslam_loc.launch  orbslam_map.launch  orbslam_mapcompress.launch  orbslam_simloc.launch  orbslam_simmap.launch
ai_robot_localization/nodes/: start_loc.sh
ai_robot_localization/orbslam_configs/: stereo.yaml  zed_stereo.yaml
ai_robot_navigation/: CMakeLists.txt  package.xml
ai_robot_navigation/config/findpath/: params_keyframe.yaml
ai_robot_navigation/config/oa/: params.yaml  params_hokuyo.yaml
ai_robot_navigation/config/pid/: params_control.yaml
ai_robot_navigation/launch/: brain.launch  carto_2d_loc.launch  gen_topo.launch  globalnav.launch  globalnav_amcl.launch  globalnav_kewei.launch  globalnav_sim.launch  hokuyo.launch  justmove.launch  lidar2d.launch  lidar3d.launch  obsavoid.launch  obsavoid_sim.launch  obsavoid_test.launch  orb.launch  posekf.launch  start.launch  test_findpath.launch
ai_robot_navigation/mapdata/: denKeyfPos.txt  denKeyfPosRelation.txt
ai_robot_navigation/src/brain/: ai_brain.cpp  ai_brain.h  ai_brain2.h  ar_drone.cpp  ar_drone.h  drone_object_ros.cpp  drone_object_ros.h  main.cpp  nav_data.cpp  nav_data.h  pioneer_3at.cpp  pos_control.cpp  pos_control.h  pos_trajectory.cpp  pos_trajectory.h
ai_robot_navigation/src/findpath/: findpath_srm.cpp  logfile.txt  set_destination_client.cpp  test_findpath.cpp
ai_robot_navigation/src/gennodemap/src/: keyframehandle.cpp  removeRedunLink.py  ros_main.cpp  save_mappoint_trajs.py
ai_robot_navigation/src/include/brain/: pioneer_3at.h
ai_robot_navigation/src/include/findpath/: findpath_srm.h
ai_robot_navigation/src/include/point_to_point/: point_to_point.h
ai_robot_navigation/src/include/utils/: adrc.h  draw_matches.h  eso.h  math_aux.h  pid_controller.h  pid_fuzzy.h  triangulate.h
ai_robot_navigation/src/obsavoid/: main.cpp  p3at_obsavoid.cpp  p3at_obsavoid.h  pointcloud_viewer.cpp
ai_robot_navigation/src/point_to_point/: point_to_point.cpp
ai_robot_navigation/src/pose_ekf/: main.cpp  pose_ekf.cpp  pose_ekf.h  vicon.cpp  vicon.h
ai_robot_navigation/src/utils/: adrc.cpp  draw_matches.cpp  eso.cpp  math_aux.cpp  pid_controller.cpp  pid_fuzzy.cpp  triangulate.cpp
ai_robot_rctl_server/: CMakeLists.txt  package.xml
ai_robot_rctl_server/launch/: start_server.launch
ai_robot_rctl_server/msg/: RctlMapMetaData.msg
ai_robot_rctl_server/src/: main.cpp  rctl_server.cpp  rctl_server.h
ai_robot_sensors/: CMakeLists.txt  README.md  package.xml
ai_robot_sensors/config/: sensor_diags.yaml
ai_robot_sensors/config/camera/: usb30w01.yaml  usb30w02m.yaml  usbfhd01m_1080p.yaml  usbfhd01m_480p.yaml  usbfhd01m_720p.yaml
ai_robot_sensors/config/gnss/: neo-m8p-2-10.yaml  um482.yaml
ai_robot_sensors/config/imu/: my_razor_xlab.yaml  razor-imu-9dof_01.yaml  razor-imu-9dof_02.yaml  razor-imu-9dof_03.yaml  razor-imu-9dof_huawei.yaml
ai_robot_sensors/launch/: start_all.launch  start_all_kewei.launch  start_all_old.launch  start_carto.launch  start_carto2d.launch  start_carto3d_rtk.launch  start_huawei.launch  start_imu.launch  start_justmove_kewei.launch  start_orb.launch  start_seletest.launch  start_tof_imu.launch  start_vigl.launch  start_ym.launch
ai_robot_sensors/rules/: 99-agilex-scout.rules  99-arduino-imu.rules  99-autolabor.rules  99-joy-btp2185.rules  99-razor-imu-9dof_02.rules  99-razor-imu-9dof_03.rules  99-ublox-m89.rules  99-um482.rules  99-xsens-imu.rules  99-zed1.rules
ai_robot_sensors/urdf/: testbed03.urdf  testbed04.urdf
docs/: cartographer_mapping_guide.md
